<resources>
    <string name="app_name">DonniWatch</string>


    <!-- 主界面 -->
    <string name="app_device">设备</string>
    <string name="app_emotions_info">情绪详情</string>

    <string name="tv_heart">心</string>
    <string name="tv_passion">情</string>
    <string name="tv_point">指</string>
    <string name="tv_num">数</string>

    <string name="tv_superior">优</string>
    <string name="tv_good">良</string>
    <string name="tv_mid">中</string>
    <string name="tv_bad">差</string>

    <string name="tv_question">提问</string>


    <!-- 注册界面 -->
    <string name="tv_login">登录</string>
    <string name="tv_regeict">注册</string>
    <string name="tv_get_sms">获取验证码</string>


    <!-- 成长界面 -->
    <string name="tv_group_up">成长</string>


    <!-- 绑定设备界面 -->
    <string name="tv_binding_device">设备绑定</string>
    <string name="tv_binding">绑定</string>

    <!-- 绑定设备界面 -->
    <string name="tv_input_num">输入手机号码</string>
    <string name="tv_input_pwd">输入密码</string>
    <string name="tv_go_register">去注册</string>
    <string name="tv_forget_pwd">忘记密码?</string>
    <string name="tv_error_pwd">账号或密码错误, 请重新输入</string>

</resources>
