<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_bg_poor"
    tools:context="com.hagk.dongni.HomeActivity">


    <ImageView
        android:id="@+id/im_left_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26.7dp"
        android:layout_marginTop="26.7dp"
        android:src="@drawable/home_menu_bg" />

    <RelativeLayout
        android:id="@+id/rl_right_device"
        android:layout_width="33.3dp"
        android:layout_height="33.3dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="26.7dp"
        android:layout_marginTop="23.3dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:scaleType="fitXY"
            android:src="@drawable/home_circle_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_device"
            android:textColor="@color/colorDevice"
            android:textSize="10.7sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_marginLeft="113.3dp"
        android:layout_marginTop="53.3dp">

        <RelativeLayout
            android:id="@+id/rl_emotions_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView

                android:layout_width="78dp"
                android:layout_height="78dp"
                android:layout_centerInParent="true"
                android:src="@drawable/home_circle_big" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/app_emotions_info"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="113.3dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="心率:"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_heart_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="80"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/次"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_center"
        android:layout_width="match_parent"
        android:layout_height="412dp"
        android:layout_marginTop="180.7dp">

        <!-- 心情指数 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="73.3dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_heart"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_passion"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_point"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_num"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/tv_mood_index"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/tv_bad"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

        </LinearLayout>


        <!--优良中差-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="73.3dp"
            android:orientation="vertical"
            android:paddingBottom="30dp"
            android:paddingTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="优"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="良"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="中"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="差"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />


        </LinearLayout>

        <ImageView
            android:id="@+id/im_ice_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="30dp"
            android:layout_marginRight="30dp"
            android:src="@drawable/home_ice_right" />

        <ImageView
            android:id="@+id/im_ice_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="30dp"
            android:src="@drawable/home_ice_left" />

        <ImageView
            android:layout_width="215.3dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:src="@drawable/home_process_bg" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/home_process_line" />

        <ImageView
            android:id="@+id/im_temperture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/home_process_poor" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_ask_questions"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56.7dp"
        android:background="@drawable/home_ask_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/tv_question"
            android:textColor="@color/colorDevice"
            android:textSize="24sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/rl_ask_questions"
        android:layout_marginLeft="106.7dp"
        android:layout_marginRight="106.7dp"
        android:layout_marginTop="53.3dp">

        <RelativeLayout
            android:id="@+id/rl_growth_trajectory"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/home_circle_mid">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/home_tree_cha" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_call"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:background="@drawable/home_circle_mid">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/home_phone_cha" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_location"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/home_circle_mid">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/home_local_poor" />
        </RelativeLayout>


    </RelativeLayout>


</RelativeLayout>
